--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     const { error } = await supabaseClient.auth.signInWithOtp({
       email: email,
       options: {
-        emailRedirectTo: 'https://www.behrangyoga.com/sattvamind'
+        emailRedirectTo: 'https://www.behrangyoga.com/sattvamind-chat'
       }
     });
 
