--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRwaGZlY3V2Z2hvem9peW5zZWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NDg3MDQsImV4cCI6MjA2MDMyNDcwNH0.u3yG-nltQlnKnH_nbR9-Ouc_2ot9UbsN-9J-aQp5mZA' // <-- sostituisci con la tua chiave anon
     )
 
-    const emailRedirectTo = 'https://www.behrangyoga.com/sattvamind-chat'
+    const emailRedirectTo = 'https://sattvamind-frontend.vercel.app/callback.html'
 
     const url = new URL(window.location.href)
     const hash = url.hash
