--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button onclick="login()">Invia link di accesso</button>
     <p id="message"></p>
   </div>
+  <div id="message" style="margin-top: 1rem; font-weight: bold;"></div>
 
   <div id="chat" style="display:none; width: 100%; height: 80vh;">
     <iframe
@@ -60,25 +61,28 @@
     }
 
     async function login() {
-      const emailInput = document.getElementById('email')
-      const message = document.getElementById('message')
-      const email = emailInput.value
+  const email = document.getElementById('email').value
 
-      const { error } = await supabase.auth.signInWithOtp({
-        email: email,
-        options: {
-          emailRedirectTo
-        }
-      })
-
-      if (error) {
-        message.textContent = 'Errore: ' + error.message
-        message.style.color = 'red'
-      } else {
-        message.textContent = 'Controlla la tua email per accedere ✉️'
-        message.style.color = 'green'
-      }
+  const { error } = await supabase.auth.signInWithOtp({
+    email,
+    options: {
+      redirectTo: 'https://sattvamind-frontend.vercel.app/callback.html'
     }
+  })
+
+  if (error) {
+    showMessage('❌ Errore: ' + error.message, 'error')
+  } else {
+    showMessage('✅ Link inviato! Controlla la tua casella email.', 'success')
+  }
+}
+
+function showMessage(text, type) {
+  const messageDiv = document.getElementById('message')
+  messageDiv.innerText = text
+  messageDiv.style.color = type === 'error' ? 'red' : 'green'
+}
+
 
     async function logout() {
       await supabase.auth.signOut()
