--- a/callback.html
+++ b/callback.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Login in corso...</title>
+</head>
+<body>
+  <p>Accesso in corso... Attendi un momento.</p>
+
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
     const supabase = createClient(
       'https://dphfecuvghozoiynsegd.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhc2Ui...'
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...' // la tua chiave pubblica completa
     )
 
-    async function handleLogin() {
-      const { error } = await supabase.auth.getSessionFromUrl()
-      if (error) {
-        console.error('Errore login:', error.message)
-      } else {
-        // ✅ Reindirizza dopo login riuscito
-        window.location.href = 'https://www.behrangyoga.com/sattvamind-chat'
-      }
-    }
+    const { error } = await supabase.auth.getSessionFromUrl()
 
-    handleLogin()
+    if (error) {
+      console.error('Errore login:', error.message)
+    } else {
+      // ✅ Sessione ricevuta, ora reindirizza al sito principale
+      window.location.href = 'https://www.behrangyoga.com/sattvamind-chat'
+    }
   </script>
-</head>
-<body>
-  <p>Accesso in corso, attendi qualche secondo...</p>
 </body>
 </html>
