--- a/index.html
+++ b/index.html
@@ -7,95 +7,87 @@
     <style>
       body {
         font-family: sans-serif;
+        background-color: #f8f8f8;
         margin: 0;
-        padding: 0;
-        background: #f8f8f8;
+        padding: 2rem;
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
       }
-      .chat-container {
-        max-width: 600px;
-        margin: auto;
-        padding: 1rem;
+      .login, .user-info {
+        max-width: 400px;
+        width: 100%;
+        padding: 2rem;
         background: white;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+        border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        text-align: center;
       }
-      .messages {
-        flex: 1;
-        overflow-y: auto;
-        margin-bottom: 1rem;
-      }
-      .message {
+      input {
         padding: 0.5rem;
         margin: 0.5rem 0;
-        border-radius: 5px;
-      }
-      .user {
-        background: #e1f5fe;
-        align-self: flex-end;
-      }
-      .bot {
-        background: #ede7f6;
-        align-self: flex-start;
-      }
-      form {
-        display: flex;
-        gap: 0.5rem;
-      }
-      input[type="text"] {
-        flex: 1;
-        padding: 0.5rem;
+        width: 100%;
+        box-sizing: border-box;
       }
       button {
         padding: 0.5rem 1rem;
-        background: #673ab7;
+        margin-top: 1rem;
+        background: #333;
         color: white;
         border: none;
         cursor: pointer;
       }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body>
-    <div class="chat-container">
-      <div class="messages" id="chat"></div>
-      <form id="chat-form">
-        <input type="text" id="name" placeholder="Il tuo nome" required />
-        <input type="text" id="message" placeholder="Scrivi un messaggio..." required />
-        <button type="submit">Invia</button>
-      </form>
+    <div class="login" id="login-box">
+      <h2>Login</h2>
+      <input type="email" id="email" placeholder="Email" />
+      <input type="password" id="password" placeholder="Password" />
+      <button onclick="login()">Accedi</button>
+    </div>
+
+    <div class="user-info" id="user-box" style="display:none">
+      <h2>Benvenuto!</h2>
+      <p id="user-email"></p>
+      <button onclick="logout()">Logout</button>
     </div>
 
     <script>
-      const form = document.getElementById('chat-form');
-      const chat = document.getElementById('chat');
+      const supabase = supabase.createClient(
+        "https://dphfecuvghozoiynsegd.supabase.co",
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRwaGZlY3V2Z2hvem9peW5zZWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NDg3MDQsImV4cCI6MjA2MDMyNDcwNH0.u3yG-nltQlnKnH_nbR9-Ouc_2ot9UbsN-9J-aQp5mZA"
+      );
 
-      function addMessage(content, sender) {
-        const div = document.createElement('div');
-        div.className = `message ${sender}`;
-        div.textContent = content;
-        chat.appendChild(div);
-        chat.scrollTop = chat.scrollHeight;
+      async function login() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+        if (error) {
+          alert('Errore: ' + error.message);
+        } else {
+          document.getElementById('login-box').style.display = 'none';
+          document.getElementById('user-box').style.display = 'block';
+          document.getElementById('user-email').innerText = data.user.email;
+        }
       }
 
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const name = document.getElementById('name').value;
-        const message = document.getElementById('message').value;
-        addMessage(`${name}: ${message}`, 'user');
-        document.getElementById('message').value = '';
+      async function logout() {
+        await supabase.auth.signOut();
+        document.getElementById('user-box').style.display = 'none';
+        document.getElementById('login-box').style.display = 'block';
+      }
 
-        const response = await fetch('https://sattvamind-backend.vercel.app/api/chat', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name, message })
-        });
-
-        const data = await response.json();
-        addMessage(`SattvaMind: ${data.reply}`, 'bot');
+      // check session
+      supabase.auth.getSession().then(({ data: { session } }) => {
+        if (session) {
+          document.getElementById('login-box').style.display = 'none';
+          document.getElementById('user-box').style.display = 'block';
+          document.getElementById('user-email').innerText = session.user.email;
+        }
       });
     </script>
   </body>
